--- a/app/src/main/res/layout/mylistitemwhitetext.xml
+++ b/app/src/main/res/layout/mylistitemwhitetext.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="2dp"
-    android:background="@color/hellgrau"
+    android:background="@color/gray"
     android:orientation="horizontal">
 
     <TextView
@@ -14,7 +14,7 @@
         android:layout_height="50dp"
         android:layout_marginStart="5dp"
         android:layout_marginTop="4dp"
-        android:textColor="@color/weiss"
+        android:textColor="@color/white"
         android:textSize="30sp" />
 </LinearLayout>
 
