--- a/app/src/main/res/drawable/plus_v1.xml
+++ b/app/src/main/res/drawable/plus_v1.xml
@@ -6,7 +6,7 @@
         <shape android:shape="rectangle">
             <size android:width="24dp"
                 android:height="24dp"/>
-            <solid android:color="@color/gruen"/>
+            <solid android:color="@color/green"/>
             <corners android:topLeftRadius="13dp"/>
         </shape>
     </item>
@@ -17,7 +17,7 @@
         <shape android:shape="rectangle">
             <size android:width="24dp"
                 android:height="24dp"/>
-            <solid android:color="@color/gruen"/>
+            <solid android:color="@color/green"/>
             <corners android:bottomLeftRadius="13dp"/>
         </shape>
     </item>
@@ -26,7 +26,7 @@
         <shape android:shape="rectangle">
             <size android:width="24dp"
                 android:height="24dp"/>
-            <solid android:color="@color/gruen"/>
+            <solid android:color="@color/green"/>
             <corners android:topRightRadius="13dp"/>
         </shape>
     </item>
@@ -35,7 +35,7 @@
         <shape android:shape="rectangle">
             <size android:width="24dp"
                 android:height="24dp"/>
-            <solid android:color="@color/gruen"/>
+            <solid android:color="@color/green"/>
             <corners android:bottomRightRadius="13dp"/>
         </shape>
     </item>
