--- a/app/src/main/res/layout/activity_hostconnectwithplayers.xml
+++ b/app/src/main/res/layout/activity_hostconnectwithplayers.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/grey"
+    android:background="@color/background_gray"
     tools:context="com.example.tobias.werwolf_v1.multipleDevices.HostConnectWithPlayers">
 
     <LinearLayout
@@ -26,7 +26,7 @@
             android:layout_marginBottom="8dp"
             android:gravity="center"
             android:text="@string/spielleiter"
-            android:textColor="@color/schwarz"
+            android:textColor="@color/black"
             android:textSize="21sp"
             android:textStyle="bold" />
     </LinearLayout>
@@ -47,7 +47,7 @@
         android:layout_height="wrap_content"
         android:text="@string/mitspielerAnzahl"
         android:textSize="20sp"
-        android:textColor="@color/weiss"
+        android:textColor="@color/white"
         android:layout_marginTop="8dp"
         android:layout_marginRight="16dp"
         android:layout_marginLeft="16dp"
