--- a/app/src/main/res/layout/activity_playercard.xml
+++ b/app/src/main/res/layout/activity_playercard.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.tobias.werwolf_v1.multipleDevices.PlayerCard"
-    android:background="@color/grey">
+    android:background="@color/background_gray">
 
     <LinearLayout
         android:id="@+id/layoutModus"
@@ -14,7 +14,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/button_rounded_corners"
-        android:backgroundTint="@color/gelb"
+        android:backgroundTint="@color/yellow"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,7 +28,7 @@
             android:layout_marginBottom="8dp"
             android:gravity="center"
             android:text="@string/spieler"
-            android:textColor="@color/schwarz"
+            android:textColor="@color/black"
             android:textSize="21sp"
             android:textStyle="bold" />
     </LinearLayout>
@@ -60,7 +60,7 @@
             android:clickable="true"
             android:gravity="center"
             android:text=""
-            android:textColor="@color/weiss"
+            android:textColor="@color/white"
             android:textSize="40sp"
             android:focusable="true" />
     </LinearLayout>
@@ -74,7 +74,7 @@
         android:layout_marginBottom="8dp"
         android:gravity="center"
         android:text="@string/charakterkarte_dr_cken_und_halten_um_eigene_rolle_zu_sehen"
-        android:textColor="@color/weiss"
+        android:textColor="@color/white"
         android:textSize="25sp"
         app:layout_constraintBottom_toTopOf="@+id/victoryStartScreenButton"
         app:layout_constraintEnd_toEndOf="parent"
@@ -88,7 +88,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/button_rounded_corners"
-        android:backgroundTint="@color/blau"
+        android:backgroundTint="@color/blue"
         android:gravity="center"
         android:text="@string/startbildschirm"
         android:textSize="20sp"
