--- a/app/src/main/res/layout/fragment_add_players.xml
+++ b/app/src/main/res/layout/fragment_add_players.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/grey">
+    android:background="@color/background_gray">
 
     <LinearLayout
         android:id="@+id/layoutModusPerson"
@@ -15,7 +15,7 @@
         android:layout_marginRight="16dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/button_rounded_corners"
-        android:backgroundTint="@color/gruen"
+        android:backgroundTint="@color/green"
         android:orientation="vertical">
 
         <TextView
@@ -26,7 +26,7 @@
             android:layout_marginBottom="8dp"
             android:gravity="center"
             android:text="@string/spielleiter"
-            android:textColor="@color/schwarz"
+            android:textColor="@color/black"
             android:textSize="21sp"
             android:textStyle="bold" />
     </LinearLayout>
@@ -43,7 +43,7 @@
         android:layout_marginRight="16dp"
         android:layout_marginLeft="16dp"
         android:background="@drawable/button_rounded_corners"
-        android:backgroundTint="@color/grau">
+        android:backgroundTint="@color/gray">
 
         <EditText
             android:id="@+id/nameText"
@@ -65,7 +65,7 @@
             android:textSize="20sp"
             android:text="@string/person_einf_gen"
             android:background="@drawable/button_rounded_corners"
-            android:backgroundTint="@color/blau"
+            android:backgroundTint="@color/blue"
             android:layout_marginRight="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginBottom="16dp"/>
@@ -79,7 +79,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
-        android:textColor="@color/weiss"
+        android:textColor="@color/white"
         android:textSize="20dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
