--- a/app/src/main/res/layout/mylistitem.xml
+++ b/app/src/main/res/layout/mylistitem.xml
@@ -5,7 +5,7 @@
     android:layout_height="64dp"
     android:orientation="horizontal"
     android:layout_marginTop="2dp"
-    android:background="@color/hellgrau"
+    android:background="@color/gray"
     android:id="@+id/layoutcharakterRolle"
 
     android:layout_marginBottom="4dp"
@@ -18,7 +18,7 @@
         android:layout_height="match_parent"
         android:layout_marginEnd="5dp"
         android:gravity="center"
-        android:textColor="@color/weiss"
+        android:textColor="@color/white"
         android:textSize="20sp"/>
 </LinearLayout>
 
