--- a/app/src/main/res/layout/mylistitemicon.xml
+++ b/app/src/main/res/layout/mylistitemicon.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="50dp"
-    android:background="@color/hellgrau"
+    android:background="@color/gray"
     android:orientation="horizontal">
 
     <ImageView
@@ -17,7 +17,7 @@
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
         android:layout_weight="6"
-        app:srcCompat="@color/hellgrau"
+        app:srcCompat="@color/gray"
         tools:ignore="ContentDescription" />
 
     <TextView
@@ -27,7 +27,7 @@
         android:layout_marginStart="5dp"
         android:layout_marginTop="2dp"
         android:layout_weight="1"
-        android:textColor="@color/weiss"
+        android:textColor="@color/white"
         android:textSize="30sp" />
 
 </LinearLayout>
